2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03437] Re: Check image size
	* fm.h (MAX_IMAGE_SIZE): changed to 2048

2002-11-16  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03436] Check image size
	* file.c (process_img): check w > MAX_IMAGE_SIZE
		(HTMLlineproc2body): check w,h > MAX_IMAGE_SIZE
	* fm.h (MAX_IMAGE_SIZE): added
	* image.c (getImageSize): check w,h,width,height > MAX_IMAGE_SIZE

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03435] save image with SAVE
	* buffer.c (discardBuffer): check image
	* file.c (loadImageBuffer): add st
			IMG_FLAG_DONE_REMOVE
			s/sourcefile/mailcap_source/
	* fm.h (IMG_FLAG_DONT_REMOVE): added
	* image.c (drawImage): & IMG_FLAG_LOADED
		(deleteImage): & IMG_FLAG_DONT_REMOVE
		(showImageProgress): & IMG_FLAG_LOADED
		(getImage): & IMG_FLAG_LOADED
		(getImageSize): & IMG_FLAG_LOADED
	* main.c (vmSrc): delete ifdef USE_IMAGE

2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03434] Re: cygwin console on Win9X
	* terms.c (cygwin_mouse_btn_swapped): ifdef USE_MOUSE
		(lastConMouse): deleted
		(check_win9x): static
		(read_win32_console): static
		(GetConsoleHwnd): static
		(cygwin_version): ifdef USE_MOUSE, static
		(check_cygwin_console): static
		(NEED_XTERM_ON): added
		(NEED_XTERM_OFF): added
		(NEED_CYGWIN_ON): added
		(NEED_CYGWIN_OFF): added
		(XTERM_TITLE): static char[]
		(SCREEN_TITLE): static char[]
		(CYGWIN_TITLE): static char[]
		(term_title): check title_str
	* terms.h (LASTLINE): added
		(is_xterm): deleted
		(enable_win9x_console_input): extern
		(disable_win9x_console_input): extern
		(NEED_XTERM_ON): deleted
		(NEED_XTERM_OFF): deleted

2002-11-16  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>

	* [w3m-dev 03433] cygwin console on Win9X
	* configure (config.h): SUPPORT_WIN9X_CONSOLE_MBCS
	* linein.c (inputLineHistSearch): enable_win9x_console_input()
					disable_win9x_console_input()
	* main.c (mouse): cygin_mouse_btn_swapped