@@ -1,5 +1,11 @@
 2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03438] Re: segmentation fault by large complex table.
+	* table.c (check_table_height): check MAXROWCELL
+	* table.h (MAXROWCELL): added
+
+2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03437] Re: Check image size
 	* fm.h (MAX_IMAGE_SIZE): changed to 2048
 
@@ -4779,4 +4785,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.521 2002/11/15 15:58:27 ukai Exp $
+$Id: ChangeLog,v 1.522 2002/11/15 16:00:33 ukai Exp $
